# Smarttbot_test_2.0

./: .gitignore  README.md  apagar.py  pyproject.toml  teste.py
candle/: candle.py
models/: apagar2.py  candleModels.py
requester/: requester.py
setupCandle/: setupCandle.py
unit/: test_dumb.py
