[tool.poetry]
name = "smarttbot_test_2.0"
version = "0.1.0"
description = ""
authors = ["Kaique Costa <kaique.costa@smarttbotter.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
requests = "^2.27.1"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
